模块新增 - 基础功能、高级业务、设备运维、外部接口

--- a/blade-service-api/pom.xml
+++ b/blade-service-api/pom.xml
@@ -17,6 +17,9 @@
 
     <modules>
         <module>blade-basics-api</module>
+        <module>blade-device-api</module>
+        <module>blade-external-api</module>
+        <module>blade-advanced-api</module>
     </modules>
 
     <dependencies>
