--- a/blade-ops/pom.xml
+++ b/blade-ops/pom.xml
@@ -20,6 +20,7 @@
         <module>blade-resource</module>
         <module>blade-swagger</module>
         <module>blade-log</module>
+        <module>blade-task</module>
     </modules>
 
 </project>
