--- a/blade-ops/blade-log/pom.xml
+++ b/blade-ops/blade-log/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>blade-core-boot</artifactId>
             <version>${blade.tool.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springblade</groupId>
+            <artifactId>blade-common</artifactId>
+            <version>3.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
