--- a/blade-service/blade-external/pom.xml
+++ b/blade-service/blade-external/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
     <name>${project.artifactId}</name>
     <version>3.4.1</version>
+    <modules>
+        <module>blade-benyuan-server</module>
+    </modules>
     <packaging>pom</packaging>
     <description>外部接口</description>
     <artifactId>blade-external</artifactId>
