--- a/blade-service/blade-external/blade-modbus-client/pom.xml
+++ b/blade-service/blade-external/blade-modbus-client/pom.xml
@@ -18,6 +18,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.springblade</groupId>
             <artifactId>blade-core-boot</artifactId>
             <version>${blade.tool.version}</version>
